--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,93 +1,61 @@
+/*  https://fonts.google.com/*/
+
 .container{
-    max-width: 1200px;
+    max-width: 1300px;
     margin: 0 auto;
-  }
-*:where(:not(html, iframe, canvas, img, svg, video):not(svg *, symbol *)) {
-    all: unset;
-    display: revert;
-}
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-a, button {
-    cursor: revert;
-}
-ol, ul, menu {
-    list-style: none;
+    padding: 5px 20px;
 }
 
-img {
-    max-width: 100%;
+.container-large{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 30px 20px;
 }
 
-table {
-    border-collapse: collapse;
-}
-textarea {
-    white-space: revert;
+/* CABEÇALHO */
+header.cabecalho{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-meter {
-    -webkit-appearance: revert;
-    appearance: revert;
+header.cabecalho .container{
+    display: flex;
 }
 
-::placeholder {
-    color: unset;
+/* LOGO */
+header.cabecalho .cabecalho__logo{
+   
 }
-:where([hidden]) {
-    display: none;
+header.cabecalho .cabecalho__logo img{
+    width: 100px;
 }
-:where([contenteditable]) {
-    -moz-user-modify: read-write;
-    -webkit-user-modify: read-write;
-    overflow-wrap: break-word;
-}
-:where([draggable="true"]) {
-    -webkit-user-drag: element;
-}
-.menu {
+
+
+
+/* MENU */
+header.cabecalho nav{
     width: 100%;
-    background: #ffffff;
-    box-shadow: 0px 4px 30px -10px rgba(0, 0, 0, 0.1);
-  }
-  .menu-flex {
+    
+}
+header.cabecalho .cabecalho__menu{
+    padding-top: 20px;
     display: flex;
-    align-items: center;
-  }
-  .menu-column {
-    display: flex;
-    align-items: center;
-    width: 50%;
-    justify-content: flex-start;
-  }
-  .menu-column.menu-second-column {
-    justify-content: flex-end;
-  }
-  .menu-nav ul {
-    display: flex;
-    list-style: none;
-    gap: 10px; /* Vamos utilizar essa propriedade do flex para colocar um espaçamento entre os elementos*/
-  }
-
-  .menu-nav ul li a {
-    text-decoration: none;
-    color: #585e65;
-  }
-  .menu-link-button {
-    text-decoration: none;
-    height: 48px;
-    background-color: #4c6ef5;
-    color: #fff;
-    padding: 0 32px;
-    display: flex;
-    align-items: center;
-    border-radius: 4px;
-  }
-  .products-wrapper{
-    display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+header.cabecalho .cabecalho__menu li{
+  
+    margin: 0 30px;
+}   
+header.cabecalho .cabecalho__menu a{
+    font-weight: 400;
+}
+.btn_click {
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    background: #4C6EF5;
+    border: 1.5px solid #4C6EF5;
+    border-radius: 8px;
+    color: #ffffff;
 }
